update review && ticket
